# VRiscV

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.h.in  main.c
.github/workflows/: build.yml  cmake-single-platform.yml
misc/: rv32-dec.toml  rv32_dec.toml
misc/python/: decode.py  requirements.txt  rv_test.py
src/: main.c
src/cpu/: back_end.c  back_end.h  cpu.c  cpu.h  cpu_config.h  cpu_glb.c  cpu_glb.h  decode.h  execution.h  front_end.c  front_end.h  sys_reg.c  sys_reg.h
src/dev/: clock.c  clock.h  dev_bus.c  dev_bus.h  dev_config.h  display.c  display.h  int_ctrl.c  int_ctrl.h  mem_pool.c  mem_pool.h  memory.c  memory.h
src/include/: color.h  comm.h  config.h
src/utils/: binary_reader.c  binary_reader.h  simple_loader.c  simple_loader.h  str_tools.c  str_tools.h
tests/: display_test.c  hello_world.c  mem_test.c  test_bin_read.c
tests/isa_testcase/rv32mi-p/: rv32mi-p-breakpoint  rv32mi-p-breakpoint.dump  rv32mi-p-csr  rv32mi-p-csr.dump  rv32mi-p-illegal  rv32mi-p-illegal.dump  rv32mi-p-lh-misaligned  rv32mi-p-lh-misaligned.dump  rv32mi-p-lw-misaligned  rv32mi-p-lw-misaligned.dump  rv32mi-p-ma_addr  rv32mi-p-ma_addr.dump  rv32mi-p-ma_fetch  rv32mi-p-ma_fetch.dump  rv32mi-p-mcsr  rv32mi-p-mcsr.dump  rv32mi-p-sbreak  rv32mi-p-sbreak.dump  rv32mi-p-scall  rv32mi-p-scall.dump  rv32mi-p-sh-misaligned  rv32mi-p-sh-misaligned.dump  rv32mi-p-shamt  rv32mi-p-shamt.dump  rv32mi-p-sw-misaligned  rv32mi-p-sw-misaligned.dump  rv32mi-p-zicntr  rv32mi-p-zicntr.dump
tests/isa_testcase/rv32ui-p/: rv32ui-p-add  rv32ui-p-addi  rv32ui-p-and  rv32ui-p-andi  rv32ui-p-auipc  rv32ui-p-beq  rv32ui-p-bge  rv32ui-p-bgeu  rv32ui-p-blt  rv32ui-p-bltu  rv32ui-p-bne  rv32ui-p-fence_i  rv32ui-p-fence_i.dump  rv32ui-p-jal  rv32ui-p-jalr  rv32ui-p-lb  rv32ui-p-lb.dump  rv32ui-p-lbu  rv32ui-p-lbu.dump  rv32ui-p-lh  rv32ui-p-lh.dump  rv32ui-p-lhu  rv32ui-p-lhu.dump  rv32ui-p-lui  rv32ui-p-lw  rv32ui-p-ma_data  rv32ui-p-ma_data.dump  rv32ui-p-or  rv32ui-p-ori  rv32ui-p-sb  rv32ui-p-sb.dump  rv32ui-p-sh  rv32ui-p-sh.dump  rv32ui-p-simple  rv32ui-p-simple.dump  rv32ui-p-sll  rv32ui-p-slli  rv32ui-p-slt  rv32ui-p-slti  rv32ui-p-sltiu  (+9 more)
tests/isa_testcase/rv32um-p/: rv32um-p-div  rv32um-p-div.dump  rv32um-p-divu  rv32um-p-divu.dump  rv32um-p-mul  rv32um-p-mul.dump  rv32um-p-mulh  rv32um-p-mulh.dump  rv32um-p-mulhsu  rv32um-p-mulhsu.dump  rv32um-p-mulhu  rv32um-p-mulhu.dump  rv32um-p-rem  rv32um-p-rem.dump  rv32um-p-remu  rv32um-p-remu.dump
